objects/Contract_Extranet_Account__c.object
<CustomObject>
    <description>Extranet accounts that need to be created per the contract.</description>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <referenceTo>Contract_Checklist__c</referenceTo>
        <relationshipLabel>Contract Extranet Accounts</relationshipLabel>
        <relationshipName>Contract_Extranet_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Extranet_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Extranet Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extranet View Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Contract Extranet Account</label>
    <nameField>
        <label>Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Extranet Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>